Changed glitch animation to rgb style

--- a/src/scss/base/_typeface.scss
+++ b/src/scss/base/_typeface.scss
@@ -65,15 +65,16 @@ h4 {
     position: absolute;
     top: $top-offset;
     width: 100%;
-    background: $background-color;
   }
 
   &::after {
-    left: 2px;
-    @include animation(glitch-text-animation-1 2s infinite linear alternate-reverse);
+    left: 1px;
+    text-shadow: -1px 0 rgba($color-primary, 0.7);
+    @include animation(glitch-text-animation-1 4s infinite linear alternate-reverse);
   }
   &::before {
-    left: -2px;
+    left: -1px;
+    text-shadow: 1px 0 rgba($color-secondary, 0.7);
     @include animation(glitch-text-animation-2 3s infinite linear alternate-reverse);
   }
 }
