--- a/src/scss/base/_animation.scss
+++ b/src/scss/base/_animation.scss
@@ -30,41 +30,47 @@
 }
 
 // Text that glitches out
-@include keyframes(glitch-text-animation) {
-  $steps: 20;
-  @for $i from 0 through $steps {
-    #{percentage($i * (1 / $steps))} {
-      clip: rect(random(100) + px, 9999px, random(100) + px, 0);
+@for $i from 1 through 2 {
+  @include keyframes(glitch-text-animation-#{$i}) {
+    $steps: 10;
+    @for $i from 0 through $steps {
+      $top: percentage(random(100) / 100);
+      $bottom: percentage(random(101 - $top) / 100);
+      #{percentage($i*(1/$steps))} {
+        clip-path: inset($top 0 $bottom 0);
+      }
     }
   }
 }
 
 // Image flicker animation
 @mixin flicker-image($name, $image-1, $image-2, $image-1-filter: none, $image-2-filter: none) {
-  @include keyframes($name) {
-    0%,
-    19%,
-    22%,
-    47%,
-    60%,
-    82%,
-    84%,
-    86%,
-    88%,
-    100% {
-      background-image: $image-1;
-      filter: $image-1-filter;
-    }
+  @at-root {
+    @include keyframes($name) {
+      0%,
+      19%,
+      22%,
+      47%,
+      60%,
+      82%,
+      84%,
+      86%,
+      88%,
+      100% {
+        background-image: $image-1;
+        filter: $image-1-filter;
+      }
 
-    20%,
-    21%,
-    48%,
-    59%,
-    83%,
-    85%,
-    87% {
-      background-image: $image-2;
-      filter: $image-2-filter;
+      20%,
+      21%,
+      48%,
+      59%,
+      83%,
+      85%,
+      87% {
+        background-image: $image-2;
+        filter: $image-2-filter;
+      }
     }
   }
 }
