--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -30,7 +30,7 @@
 
     #name {
       @include text($heading-font-family, 76px, 400, 1.2, -0.5px, none, $color-on-base);
-      @include glitch-text($color-on-base, $color-base, 10px);
+      @include glitch-text("name-glitch-text", $color-on-base, $color-base, 11px);
     }
 
     span {
