Brighter border. Border switch in button.

--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -40,10 +40,10 @@
 }
 
 // Creates a neon box-shadow around the element
-@mixin neon-box-shadow($color, $color-dark, $size: 4px) {
+@mixin neon-box-shadow($color, $color-dark, $size: 12px) {
   border-color: $color;
-  box-shadow: 0 0 $size $color, 0 0 $size * 2 $color-dark, 0 0 $size / 2 $color, inset 0 0 $size $color, inset 0 0 $size * 2 $color-dark,
-    inset 0 0 $size / 2 $color;
+  box-shadow: 0 0 $size $color, 0 0 $size * 2 $color-dark, 0 0 $size / 2 $color, inset 0 0 $size $color,
+    inset 0 0 $size * 2 $color-dark, inset 0 0 $size / 2 $color;
 }
 
 // Pseudo-border(-top/-bottom) that expands and contracts from the center
