--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -6,11 +6,11 @@
   &-content {
     margin: 120px 24vw;
 
-    @include breakpoint(1200px) {
+    @include breakpoint-tablet {
       margin: 60px 14vw;
     }
 
-    @include breakpoint(600px) {
+    @include breakpoint-phone {
       margin: 60px 4vw;
     }
   }
