--- a/src/scss/pages/_contact-me.scss
+++ b/src/scss/pages/_contact-me.scss
@@ -6,6 +6,14 @@
   &-content {
     @extend %absolute-center;
     max-width: 800px;
+
+    @include breakpoint-phone {
+      position: static;
+      top: auto;
+      left: auto;
+      transform: none;
+      margin: 60px 4vw;
+    }
   }
 
   form {
@@ -17,6 +25,10 @@
     #sender-info {
       display: inline-flex;
       gap: 6px;
+
+      @include breakpoint(800px) {
+        flex-flow: column;
+      }
     }
 
     input {
