--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -47,6 +47,10 @@
 
     margin-top: 100px;
 
+    @include breakpoint-tablet{
+      margin-top: 48px;
+    }
+
     &-content {
       display: flex;
 
