Moved anchor/ul classes to placeholder selectors

--- a/src/scss/abstract/_placeholders.scss
+++ b/src/scss/abstract/_placeholders.scss
@@ -15,3 +15,14 @@
   padding: 0;
   margin: 0;
 }
+
+// Anchor with no underline on hover
+a%no-underline{
+  background: none;
+}
+
+// Unordered list with no decoration
+ul%no-decoration {
+  @extend %no-whitespace;
+  list-style-type: none;
+}
