--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -24,13 +24,15 @@
 
   #greeting {
     @extend %absolute-center;
-    width: 75%;
+    width: 75vw;
     max-width: 420px;
     text-align: center;
 
     #name {
-      @include text($heading-font-family, 76px, 400, 1.2, -0.5px, none, $color-on-base);
-      @include glitch-text("name-glitch-text", $color-on-base, $color-base, 11px);
+      display: inline-block;
+      @include display-text(min(18vw, 96px));
+      margin: 20px 0;
+      transform: rotate(-5deg);
     }
 
     span {
