--- a/src/scss/pages/_not-found.scss
+++ b/src/scss/pages/_not-found.scss
@@ -11,8 +11,6 @@
   }
 
   #code {
-    @include text($heading-font-family, 216px, 400, 1.2, -0.5px);
-    @include glitch-text("not-found-glitch-text", $color-on-base, $color-base, 31px);
+    @include display-text(216px);
   }
-
 }
