Neon flicker for buttons

--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -9,14 +9,14 @@
   }
 }
 
-@mixin breakpoint-tablet{
-  @include breakpoint(1200px){
+@mixin breakpoint-tablet {
+  @include breakpoint(1200px) {
     @content;
   }
 }
 
-@mixin breakpoint-phone{
-  @include breakpoint(600px){
+@mixin breakpoint-phone {
+  @include breakpoint(600px) {
     @content;
   }
 }
@@ -46,13 +46,23 @@
 }
 
 // Neon text
-@mixin neon-text($color, $color-dark, $size: 2px) {
+@mixin neon-text($color, $color-dark, $small) {
+  $size: 2px;
+  @if $small {
+    $size: 1px;
+  }
+
   color: $color;
   text-shadow: 0 0 $size $color, 0 0 $size / 2 $color-dark;
 }
 
 // Creates a neon box-shadow around the element
-@mixin neon-box-shadow($color, $color-dark, $size: 8px) {
+@mixin neon-box-shadow($color, $color-dark, $small) {
+  $size: 8px;
+  @if $small {
+    $size: 2px;
+  }
+
   border-color: $color;
   box-shadow: 0 0 $size $color, 0 0 $size * 2 $color-dark, 0 0 $size / 2 $color, inset 0 0 $size $color,
     inset 0 0 $size * 2 $color-dark, inset 0 0 $size / 2 $color;
