--- a/src/scss/base/_animation.scss
+++ b/src/scss/base/_animation.scss
@@ -29,7 +29,41 @@
   }
 }
 
-// Image flicker animation
+// Neon flicker animation
+@mixin neon-flicker($name, $color, $color-dark, $small: false, $box: true, $text: true) {
+  @at-root {
+    @include keyframes($name) {
+      5%,
+      19%,
+      40%,
+      99% {
+        @if $text {
+          color: $color-dark;
+          text-shadow: none;
+        }
+        @if $box {
+          border-color: $color-dark;
+          box-shadow: none;
+        }
+      }
+
+      0%,
+      4%,
+      20%,
+      39%,
+      100% {
+        @if $text {
+          @include neon-text($color, $color-dark, $small);
+        }
+        @if $box {
+          @include neon-box-shadow($color, $color-dark, $small);
+        }
+      }
+    }
+  }
+}
+
+// Image flicker animation (repeated)
 @mixin flicker-image($name, $image-1, $image-2, $image-1-filter: none, $image-2-filter: none) {
   @at-root {
     @include keyframes($name) {
