--- a/src/scss/base/_transition.scss
+++ b/src/scss/base/_transition.scss
@@ -46,36 +46,13 @@
   @include page-slide-transition(-100%);
 }
 
-// Sliding in/out while fading in/out
-@mixin slide-fade($translateX, $translateY) {
-  &-enter-active,
+// Flicker in/out
+.flicker {
+  &-enter-active {
+    @include animation(flicker-transition-enter 0.2s forwards);
+  }
+
   &-leave-active {
-    @include transition(opacity 0.2s, transform 0.2s);
+    @include animation(flicker-transition-leave 0.5s backwards);
   }
-
-  &-enter {
-    opacity: 0;
-    transform: translate($translateX, $translateY);
-  }
-
-  &-leave-to {
-    opacity: 0;
-    transform: translate(-$translateX, -$translateY);
-  }
-}
-
-.slide-fade-left {
-  @include slide-fade(20px, 0px);
-}
-
-.slide-fade-right {
-  @include slide-fade(-20px, 0px);
-}
-
-.slide-fade-up {
-  @include slide-fade(0px, 20px);
-}
-
-.slide-fade-down {
-  @include slide-fade(0px, -20px);
 }
