--- a/src/scss/base/_typeface.scss
+++ b/src/scss/base/_typeface.scss
@@ -62,3 +62,7 @@ h4 {
 #app {
   @include text($body-font-family, 18px, 400, 1.8, 0.5px);
 }
+
+.body-2 {
+  @include text($body-font-family, 14px, 400, 1.8, 1px);
+}
