--- a/src/scss/layouts/_sidebar-links.scss
+++ b/src/scss/layouts/_sidebar-links.scss
@@ -17,7 +17,10 @@
     }
 
     li {
-      margin: 6px 0;
+      display: flex;
+      align-items: center;
+      padding: 4px 0;
+      margin: 4px 0;
 
       // Links are now horizontal
       @include breakpoint-phone {
@@ -28,14 +31,24 @@
 
     a {
       @extend %no-underline;
+
+      &:hover + span {
+        display: inline;
+      }
     }
 
     img {
+      display: block;
       @include size(32px);
 
       &:hover {
         filter: drop-shadow(0 0 0.4px $color-primary) drop-shadow(0 0 0.8px $color-primary-dark);
       }
+    }
+
+    span {
+      display: none;
+      margin-left: 6px;
     }
   }
 }
