Reduced flicker for transition

--- a/src/scss/base/_transition.scss
+++ b/src/scss/base/_transition.scss
@@ -53,6 +53,6 @@
   }
 
   &-leave-active {
-    @include animation(flicker-transition-leave 0.5s backwards);
+    @include animation(flicker-transition-leave 0.5s forwards);
   }
 }
