Footer html and CSS (Also added to about page)

--- a/src/scss/layouts/_sidebar-links.scss
+++ b/src/scss/layouts/_sidebar-links.scss
@@ -1,3 +1,7 @@
+// -----------------------------------------------------------------------------
+// This file contains all styles related to the sidebar links
+// -----------------------------------------------------------------------------
+
 #sidebar-links {
   position: fixed;
   bottom: 32px;
