--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import "layouts/base";
 @import "layouts/header";
 @import "layouts/sidebar-links";
+@import "layouts/footer";
 
 // Components
 @import "components/button";
