--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -4,14 +4,14 @@
 
 #about {
   &-content {
-    margin: 120px 24vw;
+    margin: 80px 24vw 40px;
 
     @include breakpoint-tablet {
-      margin: 60px 14vw;
+      margin: 40px 14vw 20px;
     }
 
     @include breakpoint-phone {
-      margin: 60px 4vw;
+      margin: 40px 4vw 20px;
     }
   }
 
