--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -3,6 +3,9 @@
 // -----------------------------------------------------------------------------
 
 footer {
-    padding-bottom: 12px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 32px;
     text-align: center;
 }
