--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -68,6 +68,89 @@
     inset 0 0 $size * 2 $color-dark, inset 0 0 $size / 2 $color;
 }
 
+// Stanard navigation bar (vertical until breakpoint is reached)
+@mixin navigation-bar($breakpoint) {
+  @extend %no-decoration;
+  min-width: 200px;
+  margin: 0 12px;
+  border-left: 2px solid $color-on-background-variant;
+
+  @include breakpoint($breakpoint) {
+    position: relative;
+    min-width: 0;
+    overflow: auto;
+    white-space: nowrap;
+    border-left: 0;
+    padding: 4px !important;
+
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 6px;
+      height: 2px;
+      width: 99%;
+      z-index: -1;
+      background: $color-on-background-variant;
+    }
+  }
+
+  li {
+    position: relative;
+    padding: 8px 12px;
+    cursor: pointer;
+    @include transition(all 0.2s ease-in-out);
+
+    @include breakpoint($breakpoint) {
+      display: inline-block;
+      padding: 8px 12px 14px;
+      margin-top: 8px;
+      vertical-align: bottom;
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      @include size(6px);
+      top: 50%;
+      left: -6px;
+      transform: translateY(-50%);
+      background-color: $color-background;
+      border: 2px solid $color-on-background;
+      border-radius: 50%;
+      @include transition(all 0.2s ease-in-out);
+
+      @include breakpoint($breakpoint) {
+        top: auto;
+        left: auto;
+        right: 50%;
+        bottom: 3px;
+        transform: translateY(50%);
+      }
+    }
+
+    &.active {
+      padding-left: 20px;
+      color: $color-primary;
+
+      @include breakpoint($breakpoint) {
+        padding-left: 12px;
+        margin-top: 0;
+        padding-bottom: 22px;
+      }
+
+      &:before {
+        border-color: $color-primary;
+        left: -6px;
+
+        @include breakpoint($breakpoint) {
+          left: auto;
+          bottom: 3px;
+        }
+      }
+    }
+  }
+}
+
 // Pseudo-border(-top/-bottom) that expands and contracts from the center
 @mixin shutter-border-horizontal($height, $top, $width: 0) {
   content: "";
