--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -15,6 +15,14 @@
     }
   }
 
+  section:not(#intro) {
+    margin-top: 60px;
+
+    @include breakpoint-tablet {
+      margin-top: 30px;
+    }
+  }
+
   #intro {
     $breakpoint: 1200px;
     display: flex;
@@ -44,12 +52,6 @@
 
   #experience {
     $breakpoint: 840px;
-
-    margin-top: 100px;
-
-    @include breakpoint-tablet {
-      margin-top: 48px;
-    }
 
     &-content {
       display: flex;
