--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -50,6 +50,71 @@
     }
   }
 
+  #skills {
+    ul {
+      @extend %no-decoration;
+    }
+
+    &-list {
+      display: flex;
+      flex-flow: row wrap;
+
+      > li {
+        flex: 1 0 0;
+        margin: 0 12px;
+      }
+    }
+
+    .skill {
+      position: relative;
+      height: 300px;
+
+      .title {
+        @extend %absolute-center;
+        text-align: center;
+        cursor: pointer;
+
+        h3.colorPrimary {
+          color: $color-primary;
+        }
+      }
+
+      .content {
+        > ul {
+          display: flex;
+          height: 300px;
+          flex-flow: column wrap;
+          align-content: stretch;
+
+          > li {
+            display: flex;
+            margin: 0 12px;
+          }
+        }
+
+        .name {
+          flex: 1 0 auto;
+          padding-right: 32px;
+        }
+
+        .rating {
+          li {
+            display: inline-block;
+            vertical-align: middle;
+            height: 2px;
+            width: 8px;
+            margin: 0 2px;
+            background-color: $color-on-background-variant;
+
+            &.filled {
+              background-color: $color-primary;
+            }
+          }
+        }
+      }
+    }
+  }
+
   #experience {
     $breakpoint: 840px;
 
