--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -68,12 +68,12 @@
     inset 0 0 $size * 2 $color-dark, inset 0 0 $size / 2 $color;
 }
 
-// Stanard navigation bar (vertical until breakpoint is reached)
+// Standard navigation bar (vertical until breakpoint is reached)
 @mixin navigation-bar($breakpoint) {
   @extend %no-decoration;
   min-width: 200px;
   margin: 0 12px;
-  border-left: 2px solid $color-on-background-variant;
+  border-left: 1px solid $color-on-background-variant;
 
   @include breakpoint($breakpoint) {
     position: relative;
@@ -87,7 +87,7 @@
       content: "";
       position: absolute;
       bottom: 6px;
-      height: 2px;
+      height: 1px;
       width: 99%;
       z-index: -1;
       background: $color-on-background-variant;
@@ -112,10 +112,10 @@
       position: absolute;
       @include size(6px);
       top: 50%;
-      left: -6px;
+      left: -4px;
       transform: translateY(-50%);
       background-color: $color-background;
-      border: 2px solid $color-on-background;
+      border: 1px solid $color-on-background;
       border-radius: 50%;
       @include transition(all 0.2s ease-in-out);
 
@@ -123,7 +123,7 @@
         top: auto;
         left: auto;
         right: 50%;
-        bottom: 3px;
+        bottom: 2px;
         transform: translateY(50%);
       }
     }
@@ -140,11 +140,11 @@
 
       &:before {
         border-color: $color-primary;
-        left: -6px;
+        left: -4px;
 
         @include breakpoint($breakpoint) {
           left: auto;
-          bottom: 3px;
+          bottom: 2px;
         }
       }
     }
